<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/catBread"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:insetLeft="20dp"
            android:insetTop="10dp"
            android:insetRight="20dp"
            android:text="@string/bread_cat"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/catPasta"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:insetLeft="20dp"
            android:insetTop="10dp"
            android:insetRight="20dp"
            android:text="@string/pasta_cat"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/catMilk"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:insetLeft="20dp"
            android:insetTop="10dp"
            android:insetRight="20dp"
            android:text="@string/milk_cat"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/catCereal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:insetLeft="20dp"
            android:insetTop="10dp"
            android:insetRight="20dp"
            android:text="@string/cereals_cat"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/catDrinks"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:insetLeft="20dp"
            android:insetTop="10dp"
            android:insetRight="20dp"
            android:text="@string/drinks_cat"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/catOther"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:insetLeft="20dp"
            android:insetTop="10dp"
            android:insetRight="20dp"
            android:text="@string/other_cat"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>