<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/shop"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                app:srcCompat="@drawable/product1" />

            <ImageView
                android:id="@+id/product2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                app:srcCompat="@drawable/product2" />

            <ImageView
                android:id="@+id/product3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                app:srcCompat="@drawable/product3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textProduct1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_name"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textProduct2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread_name"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textProduct3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cola_name"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/custProduct1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 руб"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/custProduct2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 руб"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/custProduct3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 руб"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/toBusk1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetRight="5dp"
                android:text="@string/to_busket"
                android:textSize="12sp" />

            <Button
                android:id="@+id/toBusk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetRight="5dp"
                android:text="@string/to_busket"
                android:textSize="12sp" />

            <Button
                android:id="@+id/toBusk3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:insetLeft="5dp"
                android:insetRight="5dp"
                android:text="@string/to_busket"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>